--- a/css/styles.css
+++ b/css/styles.css
@@ -10536,5 +10536,5 @@ section.resume-section .resume-section-content {
 #about {
   background-image: url(../assets/img/istanbulPhoto2.jpg);
   max-width: 90rem;
-  background-size: 260%;
+  background-size: 230rem;
 }
